# potemkeys

./: .gitignore  Config.py  FGfFwK.py  FGfGwK.py  FGfGwK.spec  FGfGwKoptions.jsonc  GlobalState.py  LICENSE  Pipfile  README.md  TODO.md  gen_installer.ps1  justfile  main.py  options.jsonc  options.yaml  potemkeys.spec  pyproject.toml  readme.md  start.cmd  start.sh
.github/workflows/: pre-release-macos.yml  pre-release-ubuntu.yml  pre-release-windows.yml  pre-release.yml
COBOL/: README.md  babby.cbl
FGfGwK/: Config.py  FGfGwK.py  GlobalState.py  Utils.py  __main__.py
FGfGwK/tests/: test_potato.py
apk/decompile/: asdf
bash/youtube-dl/: urls.txt  youtube-dl-xterm-background.sh
c/: README.md  strncpyExample.c  test.c
c/files/: calculateSum.c  loanSheet.csv
c/input/: Makefile  command_line_args.c
c/pointers/: Makefile  strings  strings.c  strings_clobbering_null_terminators.c
cmd/: cleanup_disk.cmd
cpp/PaintingExample/: PaintingExample.sln  PaintingExample.vbproj
cpp/testdrawing/: poop.cpp  poop.vba
docker/docker_compose_box_communication/: README.md  docker-compose.yml
docker/flask_dockerized/: Dockerfile  README.md  app.py  build-and-run.sh
docker/multi_container_node/: package.json
java/: .gitignore
java/spring-boot-start-baeldung/: README.md  pom.xml
java/test-owasp-esapi/: README.md  pom.xml
javascript/Guilty Gear WASD Converter/: background.js  content.js  convert.js  demo.html  manifest.json  window.html
javascript/github-simple-web-api/: index.html  script.js
javascript/guilty_gear_key_converter/: gg_convert_to_wasd.html
k8s/shell-demo/: README.md  pod.yaml
lisp/: README.md
lisp/oop/: dims.txt  human.lisp
media/: pelleds.xcf
potemkeys/: Config.py  GlobalState.py  KeyEventUtils.py  Utils.py  __main__.py  potemkeysoptions.jsonc
potemkeys/tests/: test_potato.py
powershell/download-yt-vids/: .gitignore  download_youtube_videos.ps1  download_youtube_videos_as_mp3.ps1  videos.txt
python3/: delete_eof.py  test-delete-eof.txt
python3/capture_keys/: fighting_games_for_goldfish_with_keyboard.py  log.txt
python3/dicts/: recurse_dicts.py
python3/network/: .gitignore  Pipfile  pingstats.md  pingstats.py
react/my-app/: README.md  (+2 more)
scripts/: generate_exe.cmd  generate_exe.sh  setup.cmd  setup.sh  start.cmd  start.sh
(+76 files in other folders)
