[tool.poetry]
name = "FGfGwK"
version = "1.0.1"
description = "Fighting games for goldfish with keyboards >:3c"
authors = ["henryfbp <HenryFBP@gmail.com>"]
include = ["FGfGwK/*"]

[tool.poetry.dependencies]
python = "^3.8"
pywin32-ctypes = { version = "*", markers = "sys_platform == 'win32'" }
python3-xlib = { version = "*", markers = "sys_platform != 'win32'" }
json5 = "^0.9.6"
pygame = "^2.1.2"
pynput = "^1.7.6"
mergedeep = "^1.3.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pyinstaller = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
