[project]
name = "potemkeys"
version = "1.0.5"
description = "Fighting games for goldfish with keyboards >:3c"
authors = [{name = "henryfbp", email = "HenryFBP@gmail.com"}]
readme = "README.md"
keywords = ["pygame", "fighting-game", "tekken", "guilty-gear-strive"]
requires-python = ">=3.8,<3.14"
dependencies = [
    "json5>=0.9.6",
    "pygame>=2.1.2",
    "pynput>=1.7.6",
    "mergedeep>=1.3.4",
    "pywin32-ctypes; sys_platform == 'win32'",
    "python3-xlib; sys_platform != 'win32'",
]

[project.urls]
Homepage = "https://github.com/henryfbp/potemkeys"

[dependency-groups]
dev = [
    "pytest>=6.2.5",
    "pyinstaller",
    "macholib; sys_platform == 'darwin'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["potemkeys/*"]
